# patrol

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: engine.rs  event.rs  format.rs  lib.rs  main.rs  nfa.rs  pattern.rs  timestamp.rs
tests/: engine_tests.rs
